--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ title: Home
 <div class="container main">
     <div class="row">
         <div class="container col-md-12 col-sm-12 col-xs-12">
-            <span class="span-last-updated">(last updated: Jan 2022)</span>
+            <span class="span-last-updated">(last updated: Jan 2023)</span>
 
             <p style="margin-top:10px;">
                 I am currently working as a postdoctoral research fellow for Computational Pathology at Brigham and Women's Hospital.
-                I earned my Ph.D. in applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
+                I earned my Ph.D. in Applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
                 My mathematical interests lie at the intersection of Combinatorics, Statistics and Biology. I am also a Research Trainee at Brigham and Women's Hospital through <a href="https://gibsonlab.io/">Gibson Lab</a>, where I work on methods for studying the microbiome.
             </p>
             <p>My first name (Kor: 김연훈) is pronounced "Young Hoon", without the g. My colleagues simply call me "Youn".</p>
