--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ title: Home
             <span class="span-last-updated">(last updated: Jan 2023)</span>
 
             <p style="margin-top:10px;">
-                I am currently working as a postdoctoral research fellow for Computational Pathology at Brigham and Women's Hospital.
+                I am currently working as a postdoctoral research fellow at Brigham and Women's Hospital / Harvard Medical School, where I work on problems related to the microbiome.
                 I earned my Ph.D. in Applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
-                My mathematical interests lie at the intersection of Combinatorics, Statistics and Biology. I am also a Research Trainee at Brigham and Women's Hospital through <a href="https://gibsonlab.io/">Gibson Lab</a>, where I work on methods for studying the microbiome.
+                My mathematical interests lie at the intersection of Combinatorics, Statistics and Biology.
             </p>
             <p>My first name (Kor: 김연훈) is pronounced "Young Hoon", without the g. My colleagues simply call me "Youn".</p>
 
@@ -54,7 +54,7 @@ title: Home
                 <p>
             </div>
 
-            <h3>Research</h3>
+            <h3>Research</h3>for Computational Pathology at 
             <div>
                 <ul>
                     <li>Kim Y, (...), Berger B, Gibson TE.<i>Strain Tracking with Uncertainty Quantification</i> Submitted. <a style="color:red;" href="https://github.com/gibsonlab/chronostrain">[Github]</a> </li>
@@ -63,13 +63,6 @@ title: Home
                     <li>Kim Y, Mossel E, Ramnarayan G, Turner P. <i>Efficient Reconstruction of Stochastic Pedigrees</i>. <a href="https://arxiv.org/abs/2005.03810"0y>[arxiv]</a></li>
                     <li>Kim Y, Koehler F, Moitra A, Mossel E, Ramnarayan G. <i>How Many Subpopulations is Too Many? Exponential Lower Bounds for Inferring Population Histories</i>. RECOMB 2019, Journal of Computational Biology Special Issue. <a href="https://arxiv.org/abs/1811.03177">[arxiv]</a> <a href="https://www.liebertpub.com/doi/10.1089/cmb.2019.0318">[journal]</a></li>
                     <li>Leiserson MD, Vandin F, Wu HT, Dobson JR, Eldridge JV, Thomas JL, Papoutsaki A, Kim Y, Niu B, McLellan M, Lawrence MS. <i>Pan-cancer network analysis identifies combinations of rare somatic mutations across pathways and protein complexes.</i> Nature genetics 2015. <a href="https://www.nature.com/articles/ng.3168">[article]</a></li>
-                </ul>
-            </div>
-
-            <h3>Miscellany</h3>
-            <div>
-                <ul>
-                    <li>I was an organizer for the <b>MIT Simple Person's Applied Math Seminar (SPAMS)</b> for 2018 ~ 2019. Graduate students give talks that are roughly thirty-minutes long, zero-pressure and are meant for fun and expository (applied) mathematics to be presented to a curious audience. We've hosted people from various departments, not just mathematics. Please attend or give a talk!</li>
                 </ul>
             </div>
         </div>
