--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ title: Home
                 I am currently working as a postdoctoral research fellow at Brigham and Women's Hospital / Harvard Medical School, where I work on problems related to the microbiome.
                 I earned my Ph.D. in Applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
                 My mathematical interests lie at the intersection of Combinatorics, Statistics and Biology.
+
+                Please note that my MIT email is not actively being checked. Please contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu.
             </p>
             <p>My first name (Kor: 김연훈) is pronounced "Young Hoon", without the g. My colleagues simply call me "Youn".</p>
 
@@ -84,10 +86,10 @@ title: Home
     <div class="row">
         <div class="container col-md-12 col-sm-12 col-xs-12">
             <h3>Contact</h3>
-            <p>The best way to get in touch is by e-mail: younhun (at) mit (dot) edu.</p>
+            <p>The best way to get in touch is by e-mail: ykim78 (at) bwh (dot) harvard (dot) edu.
             <p>
-                <a href="http://math.mit.edu">Department of Mathematics</a>, Room 2-341C<br>
-                <a href="http://web.mit.edu">Massachusetts Institute of Technology</a><br>
+                <a href="http://math.mit.edu">Postdoctoral Researcher</a>Hale 8002C<br>
+                <a href="http://web.mit.edu">Brigham and Women's Hospital / Harvard Medical School</a><br>
             </p>
         </div>
     </div>
