--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Home
                 I earned my Ph.D. in Applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
                 My mathematical interests lie at the intersection of Combinatorics, Statistics and Biology.
 
-                Please note that my MIT email is not actively being checked. Please contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu.
+                Please note that my MIT email (younhun (at) mit.edu)is not actively being checked. Please contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu.
             </p>
             <p>My first name (Kor: 김연훈) is pronounced "Young Hoon", without the g. My colleagues simply call me "Youn".</p>
 
