--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ title: Home
                 I am currently working as a postdoctoral research fellow at Brigham and Women's Hospital / Harvard Medical School, where I work on problems related to the microbiome.
                 I earned my Ph.D. in Applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
                 My mathematical interests lie at the intersection of Combinatorics, Statistics and Biology.
-
+            </p>   
+            <p style="font-style:italic;">
                 Please note that my MIT email (younhun (at) mit.edu)is not actively being checked. Please contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu.
             </p>
             <p>My first name (Kor: 김연훈) is pronounced "Young Hoon", without the g. My colleagues simply call me "Youn".</p>
