--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ title: Home
                 My mathematical interests lie at the intersection of Combinatorics, Statistics and Biology.
             </p>   
             <p style="font-style:italic;">
-                Please note that my MIT email (younhun (at) mit.edu)is not actively being checked. Please contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu.
+                Please note that my MIT email (younhun (at) mit.edu) is outdated. 
+                Contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu.
             </p>
             <p>My first name (Kor: 김연훈) is pronounced "Young Hoon", without the g. My colleagues simply call me "Youn".</p>
 
