--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@ title: Home
 
             <p style="margin-top:10px;">
                 I am currently working as a postdoctoral research fellow at Brigham and Women's Hospital / Harvard Medical School, where I work on problems related to the microbiome.
-                I earned my Ph.D. in Applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
                 My mathematical interests lie at the intersection of Combinatorics, Statistics and Biology.
             </p>   
             <p style="font-style:italic;">
@@ -48,8 +47,8 @@ title: Home
             <h3>General</h3>
             <div>
                 <p>
-                    I received a Bachelor of Science degree in May 2016 from Brown University in Mathematics and Computer Science.
-                    During my time there, I was fortunate enough to be in the company of Professors
+                    I completed my Ph.D. in Applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
+                    Prior to that, I received a Bachelor of Science degree in May 2016 from Brown University in Mathematics and Computer Science and was mentored by
                     <a href="http://www.brown.edu/Research/Istrail_Lab/sorin.php">Sorin Istrail</a> and
                     <a href="http://compbio.cs.brown.edu/">Ben Raphael</a>.
                 </p>
