--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Home
 <div class="container main">
     <div class="row">
         <div class="container col-md-12 col-sm-12 col-xs-12">
-            <span class="span-last-updated">(last updated: Jan 2023)</span>
+            <span class="span-last-updated">(last updated: Apr 2024)</span>
 
             <p style="margin-top:10px;">
                 I am currently working as a postdoctoral research fellow at Brigham and Women's Hospital / Harvard Medical School, where I work on problems related to the microbiome.
@@ -23,7 +23,7 @@ title: Home
             </p>   
             <p style="font-style:italic;">
                 Please note that my MIT email (younhun (at) mit.edu) is outdated. 
-                Contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu.
+                Contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu for all research/work-related messages.
             </p>
             <p>My first name (Kor: 김연훈) is pronounced "Young Hoon", without the g. My colleagues simply call me "Youn".</p>
 
@@ -47,7 +47,7 @@ title: Home
             <h3>General</h3>
             <div>
                 <p>
-                    I completed my Ph.D. in Applied Mathematics from MIT, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
+                    I completed my Ph.D. in Applied Mathematics from MIT in Feb 2023, under the supervision of <a href="http://people.csail.mit.edu/bab/">Bonnie Berger</a>.
                     Prior to that, I received a Bachelor of Science degree in May 2016 from Brown University in Mathematics and Computer Science and was mentored by
                     <a href="http://www.brown.edu/Research/Istrail_Lab/sorin.php">Sorin Istrail</a> and
                     <a href="http://compbio.cs.brown.edu/">Ben Raphael</a>.
