--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@ title: Home
             <h3>Contact</h3>
             <p>The best way to get in touch is by e-mail: ykim78 (at) bwh (dot) harvard (dot) edu.
             <p>
-                <a href="http://math.mit.edu">Postdoctoral Researcher</a>Hale 8002C<br>
-                <a href="http://web.mit.edu">Brigham and Women's Hospital / Harvard Medical School</a><br>
+                Office Location: Hale 8002C, Brigham and Women's Hospital
             </p>
         </div>
     </div>
