--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ title: Home
             <h3>Research</h3>for Computational Pathology at 
             <div>
                 <ul>
-                    <li>Kim Y, (...), Berger B, Gibson TE.<i>Strain Tracking with Uncertainty Quantification</i> Submitted. <a style="color:red;" href="https://github.com/gibsonlab/chronostrain">[Github]</a> </li>
+                    <li>Kim Y, (...), Berger B, Gibson TE.<i>Strain Tracking with Uncertainty Quantification</i> Under Review at Nature Microbiology. <a style="color:red;" href="https://github.com/gibsonlab/chronostrain">[Github]</a> </li>
                     <li>Gibson TE, Kim Y, Acharya S, DE Kaplan, et al. <i>Intrinsic instability of the dysbiotic microbiome revealed through dynamical systems inference at scale</i>. <a href="https://www.biorxiv.org/content/10.1101/2021.12.14.469105v1">[bioRxiv]</a></li>
                     <li>Kim Y, Acharya S, Alfonsetti D, Gerber G, Berger B, Gibson T. <i>Strain Tracking from Time-Series Data</i>. (<a href="https://gibsonlab.io/posters/kim20mlcb.pdf">Workshop poster</a>, ICML Compbio 2020)</li>
                     <li>Kim Y, Mossel E, Ramnarayan G, Turner P. <i>Efficient Reconstruction of Stochastic Pedigrees</i>. <a href="https://arxiv.org/abs/2005.03810"0y>[arxiv]</a></li>
@@ -67,7 +67,7 @@ title: Home
 
     <div class="row">
         <div class="container col-md-3 col-sm-6 col-xs-12">
-            <h4><a href="files/younhun_kim_cv.pdf">CV (Updated Jan 2022)</a>
+            <h4><a href="files/cv.pdf">CV (Updated Oct 2024)</a>
                 <!--<span style="padding-left:0.3em">&mdash; (Jul 2017)</span>--></h4>
         </div>
     </div>
