--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ title: Home
                 Please note that my MIT email (younhun (at) mit.edu) is outdated. 
                 Contact me at my new BWH e-mail address: ykim78 (at) bwh (dot) harvard (dot) edu for all research/work-related messages.
             </p>
+            <p>
+                My CV is available upon request.
+            </p>
             <p>My first name (Kor: 김연훈) is pronounced "Young Hoon", without the g. My colleagues simply call me "Youn".</p>
 
             <h3>Teaching & Mentorship</h3>
@@ -62,13 +65,6 @@ title: Home
                     <li>Leiserson MD, Vandin F, Wu HT, Dobson JR, Eldridge JV, Thomas JL, Papoutsaki A, Kim Y, Niu B, McLellan M, Lawrence MS. <i>Pan-cancer network analysis identifies combinations of rare somatic mutations across pathways and protein complexes.</i> Nature genetics 2015. <a href="https://www.nature.com/articles/ng.3168">[article]</a></li>
                 </ul>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="container col-md-3 col-sm-6 col-xs-12">
-            <h4><a href="files/cv.pdf">CV (Updated Oct 2024)</a>
-                <!--<span style="padding-left:0.3em">&mdash; (Jul 2017)</span>--></h4>
         </div>
     </div>
 
