--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Home
             <h3>Research</h3>for Computational Pathology at 
             <div>
                 <ul>
-                    <li>Kim Y, (...), Berger B, Gibson TE.<i>Strain Tracking with Uncertainty Quantification</i> Nature Microbiology <a style="color:red;" href="https://www.nature.com/articles/s41564-025-01983-z">[Nature Microbiology]</a> <a style="color:red;" href="https://github.com/gibsonlab/chronostrain">[Github]</a> </li>
+                    <li>Kim Y, (...), Berger B, Gibson TE.<i>Strain Tracking with Uncertainty Quantification</i>. <a style="color:red;" href="https://www.nature.com/articles/s41564-025-01983-z">[Nature Microbiology]</a> <a style="color:red;" href="https://github.com/gibsonlab/chronostrain">[Github]</a> </li>
                     <li>Gibson TE, Kim Y, Acharya S, DE Kaplan, et al. <i>Intrinsic instability of the dysbiotic microbiome revealed through dynamical systems inference at scale</i>. <a href="https://www.biorxiv.org/content/10.1101/2021.12.14.469105v1">[bioRxiv]</a></li>
                     <li>Kim Y, Acharya S, Alfonsetti D, Gerber G, Berger B, Gibson T. <i>Strain Tracking from Time-Series Data</i>. (<a href="https://gibsonlab.io/posters/kim20mlcb.pdf">Workshop poster</a>, ICML Compbio 2020)</li>
                     <li>Kim Y, Mossel E, Ramnarayan G, Turner P. <i>Efficient Reconstruction of Stochastic Pedigrees</i>. <a href="https://arxiv.org/abs/2005.03810"0y>[arxiv]</a></li>
